fix: action buttons is broken in top nav (reading page)

--- a/packages/webapp/src/components/ReadingLoader/index.less
+++ b/packages/webapp/src/components/ReadingLoader/index.less
@@ -1,30 +1,34 @@
-svg {
-  display:block;
-  width:258px;
-  height:258px;
-  position:absolute;
-  left:50%;
-  top:50%;
-  transform:translate(-50%,-50%);
-}
-
-.tree {
-  fill: #32c0ff;
-}
-
-.circle-mask {
-  transform-origin: 50% 90%;
-  animation: scale 5s infinite ease-out;
-}
-
-@keyframes scale {
-  0%, 100% {
-    transform: scale(0.0);
+.reading-loader-container {
+  svg {
+    display: block;
+    width: 240px;
+    height: 174px;
+    position: absolute;
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%, -50%);
   }
-  7%, 90% {
-    transform: scale(0.4);
+
+  .tree {
+    fill: #32c0ff;
   }
-  50% {
-    transform: scale(1);
+
+  .circle-mask {
+    transform-origin: 50% 90%;
+    animation: scale 5s infinite ease-out;
+  }
+
+  @keyframes scale {
+    0%,
+    100% {
+      transform: scale(0);
+    }
+    7%,
+    90% {
+      transform: scale(0.4);
+    }
+    50% {
+      transform: scale(1);
+    }
   }
 }
